# mutexpp

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.txt  generate.sh  profile.sh  readme.md  setup_msvc.bat  setup_xcode.sh
include/: mutex_adaptors.hpp  mutexpp.hpp  serial_queue.hpp  spin_adaptor.hpp
src/: analysis.cpp  analysis.hpp  main.cpp
